Atualizações nos templates e estilos conforme orientação

--- a/escola/templates/base.html
+++ b/escola/templates/base.html
@@ -123,7 +123,7 @@
                 </div>
                 
                 <div class="menu-section mt-auto">
-                    <a href="{{ url_for('auth_bp.logout') }}" class="nav-link bg-danger">
+                    <a href="{{ url_for('auth_bp.logout') }}" class="nav-link btn-sair">
                         <i class="fas fa-sign-out-alt"></i><span>Sair</span>
                     </a>
                 </div>
