--- a/escola/templates/base.html
+++ b/escola/templates/base.html
@@ -79,10 +79,10 @@
                     <i class="fas fa-home"></i>
                     <span>Página Inicial</span>
                 </a>
-                {% if session.get('nivel') in [1, 2] %}
+                {% if session.get('nivel')|string in ['1', '2'] %}
                 <div class="menu-section">
                     <div class="nav-link menu-title"><i class="fas fa-folder-plus"></i><span>Cadastros</span></div>
-                    {% if session.get('nivel') == 1 %}
+                    {% if session.get('nivel')|string == '1' %}
                     <a href="{{ url_for('auth_bp.gerenciar_usuarios') }}" class="nav-link ps-4">
                         <i class="fas fa-users-cog"></i><span>Usuários</span>
                     </a>
