--- a/escola/templates/gerenciar_usuarios.html
+++ b/escola/templates/gerenciar_usuarios.html
@@ -35,7 +35,7 @@
                         </td>
                         <td>
                             <span class="badge-nivel nivel-{{ user.nivel }}">
-                                {{ nivel_map.get(user.nivel, 'Desconhecido') }}
+                                {{ nivel_map.get(user.nivel|string|int, 'Desconhecido') }}
                             </span>
                         </td>
                         <td>
