--- a/escola/templates/cadastros/dados_escola_form.html
+++ b/escola/templates/cadastros/dados_escola_form.html
@@ -69,9 +69,17 @@
 
       <div class="col-md-4"><label class="form-label">CEP</label><input name="cep" id="cep" class="form-control" value="{{ dados.cep if dados else '' }}"></div>
       <div class="col-md-4"><label class="form-label">CNPJ</label><input name="cnpj" id="cnpj" class="form-control" value="{{ dados.cnpj if dados else '' }}"></div>
-      <div class="col-md-6"><label class="form-label">Nome do Diretor</label><input name="diretor_nome" id="diretor_nome" class="form-control" value="{{ dados.diretor_nome if dados else '' }}"></div>
+      <div class="col-md-6">
+        <label class="form-label">Nome do Diretor</label>
+        <select name="diretor_nome" id="diretor_nome" class="form-control" required>
+          <option value="">Selecione...</option>
+          {% for usuario in usuarios_diretores %}
+            <option value="{{ usuario.nome }}" {% if dados and dados.diretor_nome == usuario.nome %}selected{% endif %}>{{ usuario.nome }}</option>
+          {% endfor %}
+        </select>
+      </div>
       <div class="col-md-6"><label class="form-label">CPF do Diretor</label><input name="diretor_cpf" id="diretor_cpf" class="form-control" value="{{ dados.diretor_cpf if dados else '' }}"></div>
-    </div>
+      </div>
 
     <div style="margin-top:12px;">
       <button type="submit" class="btn btn-primary">{% if dados %}Salvar{% else %}Criar{% endif %}</button>
