--- a/escola/templates/cadastro_usuario.html
+++ b/escola/templates/cadastro_usuario.html
@@ -31,6 +31,12 @@
         </label>
         <input type="email" id="email" name="email" required placeholder="exemplo@escola.edu.br">
     </div>
+    <div class="form-group">
+        <label for="cpf">
+            <i class="fas fa-id-card"></i> CPF <span class="required">*</span>
+        </label>
+        <input type="text" id="cpf" name="cpf" required maxlength="14" placeholder="000.000.000-00" oninput="formatCPF(this)">
+    </div>
     
     <div class="form-group">
         <label for="nivel">
@@ -76,6 +82,17 @@
         </a>
     </div>
 </form>
+
+<script>
+function formatCPF(input) {
+    let value = input.value.replace(/\D/g, ''); // Remove tudo que não for dígito
+    if (value.length > 11) value = value.slice(0,11);
+    value = value.replace(/(\d{3})(\d)/, '$1.$2');
+    value = value.replace(/(\d{3})(\d)/, '$1.$2');
+    value = value.replace(/(\d{3})(\d{1,2})$/, '$1-$2');
+    input.value = value;
+}
+</script>
 
 <style>
 .form-usuario {
